Update quickstart content
Finished the quick start content for each language.